--- a/img_generator/index.html
+++ b/img_generator/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="text-center mb-3">
-        <button class="btn btn-primary me-2" onclick="generateImage()">產生圖片</button>
+        <!-- <button class="btn btn-primary me-2" onclick="generateImage()">產生圖片</button> -->
         <a id="downloadLink" class="btn btn-success" download="result.jpg">下載圖片</a>
     </div>
     <div class="canvas-wrapper text-center">
