--- a/img_generator/announcement/index.html
+++ b/img_generator/announcement/index.html
@@ -46,6 +46,7 @@
                             <option value="akari.png">灯理</option>
                             <option value="chen.png">陳旭元</option>
                             <option value="teru.png">煦</option>
+                            <option value="cb.png">CB</option>
                         </select>
                     </div>
                     <div class="mb-3">
